aws/cert-manager/test.yaml
# 1. Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-nginx
spec:
  selector:
    matchLabels:
      run: test-nginx
  replicas: 2
  template:
    metadata:
      labels:
        run: test-nginx
    spec:
      containers:
        - name: test-nginx
          image: nginx
          ports:
            - containerPort: 80

# 2. Service
---
apiVersion: v1
kind: Service
metadata:
  name: test-nginx
  labels:
    run: test-nginx
spec:
  ports:
    - port: 80
      protocol: TCP
  type: NodePort
  selector:
    run: test-nginx

# 3. Ingress
# Annotation : https://kubernetes-sigs.github.io/aws-load-balancer-controller/v2.2/guide/ingress/annotations/ 에서 확인할 수 있다.
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "test-ingress-app"
  annotations:
    alb.ingress.kubernetes.io/target-type: instance # instance, ip
    alb.ingress.kubernetes.io/scheme: internet-facing
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # alb.ingress.kubernetes.io/subnets: subnet-0dadeb59620bbcd8f, subnet-0c688f06a54bd09d5
spec:
  ingressClassName: alb
  rules:
    - host: "test2.smartseo.kr"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: "test-nginx"
                port:
                  number: 80
  tls:
    - hosts:
        - "test2.smartseo.kr"
      secretName: my-tls-secret
